syntax = "proto3";

package pearl.av.v1;

message MiscData {
  string scene_id = 1;
  string run_id = 2;
  string device_type = 3;
  string hashed_device_id = 4;
  string type = 5;         // Type/category of the miscellaneous data
  string payload = 6;      // JSON string or other data payload
}
