syntax = "proto3";

package pearl.av.v1;

import "geometry_msg.proto";
import "google/protobuf/timestamp.proto";

message Pose {
  google.protobuf.Timestamp frame_timestamp = 1;
  string frame_id = 2;
  string device_type = 3;
  string hashed_device_id = 4;
  string scene_id = 5;
  Pose3D pose = 6;
  string source = 7; // pose estimation source (e.g., "FAST_LIO", "wheel_odometry", "visual_slam", "EKF")
}

// Trajectory waypoint
message PathPoint {
  google.protobuf.Timestamp frame_timestamp = 1;
  string frame_id = 2;
  string device_type = 3;
  string hashed_device_id = 4;
  string scene_id = 5;
  Pose3D pose = 6;
  string kind = 7;            // optional classification of waypoint
}
