syntax = "proto3";

package pearl.avschema.registry.v1;

message SchemaIdentity {
  string name = 1;
  string version = 2;
  int32 revision = 3;
}

message SchemaRegistry { repeated SchemaIdentity records = 1; }
